# revoltbot-template

./: setup.cfg
src/revoltbot/: __main__.py
src/revoltbot/ext/: bot.py
src/revoltbot/plugins/: core.py  dev.py
