[metadata]
name = RevoltBot
version = 1.0.0
description = Yes
author = None yet
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
setup_requires =
    setuptools
install_requires =
    mutiny==0.3.1a0
    aiohttp==3.7.3
    python-dotenv==0.19.0
    rich==10.7.0

[options.entry_points]
console_scripts =
    revoltbot=revoltbot.__main__:main

[options.packages.find]
where = src
include =
    revoltbot-template
    revoltbot-template.*
